--- a/index.html
+++ b/index.html
@@ -105,22 +105,23 @@
                   <div class="col-10 col-lg-8 blurb mb-5 mb-md-0"> 
                         <h2 class="sub">JOIN THE <span>FAM</span></h2>
                         <p>Get updates about the product, mission and culture of NO LYE.</p>
-                        <form>
+                        <form name="subscribe" method="POST" data-netlify-recaptcha="true" data-netlify="true">
                             <div class="mb-3">
                             <div class="form-group">
                               <label for="name">First Name</label>
-                              <input type="name" class="form-control" id="name" >
+                              <input type="name" class="form-control" id="name" name="name">
                             </div></div>
                             <div class="mb-3">
                             <div class="form-group">
                               <label for="email">Email</label>
-                              <input type="email" class="form-control" id="email" aria-describedby="email" >
+                              <input type="email" class="form-control" id="email" aria-describedby="email" name="email">
                             </div></div>
                             <div class="mb-3">
                             <div class="form-group">
                               <label for="password">Password</label>
-                              <input type="password" class="form-control" id="password" >
+                              <input type="password" class="form-control" id="password" name="password">
                             </div></div>
+                            <div data-netlify-recaptcha="true"></div>
                             <button type="submit" class="btn btn-warning">SUBSCRIBE</button>
                           </form>
 
